--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.0
   flutter_spinkit: ^5.0.0
-  flutter_svg: ^2.0.5
+  flutter_svg: ^2.1.0
   flutter_windowmanager: ^0.2.0
   get_it: ^7.2.0
   google_fonts: ^6.1.0
@@ -46,7 +46,7 @@ dependencies:
   isar: ^3.1.0
   isar_flutter_libs: ^3.1.0
   local_auth: ^2.1.2
-  logger: ^2.0.0
+  logger: ^2.3.0
   lottie: ^2.3.2
   mixpanel_flutter: ^2.0.0
   open_filex: ^4.3.1
@@ -82,7 +82,7 @@ dependencies:
   dio: ^5.3.3
   dio_http2_adapter: ^2.3.1+1
   json_annotation: ^4.8.1
-  equatable: ^2.0.5
+  equatable: ^2.0.7
   flutter_blurhash: ^0.8.2
   story_view: ^0.16.0
   freezed_annotation: ^2.4.1
@@ -109,7 +109,8 @@ dependencies:
   smooth_page_indicator: ^1.2.0
   bordered_text: ^2.0.0
   transparent_image: ^2.0.1
-
+  hydrated_bloc: ^10.0.0
+  socket_io_client: ^3.0.2
 
 
 dev_dependencies:
