--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ dependencies:
   transparent_image: ^2.0.1
   hydrated_bloc: ^10.0.0
   socket_io_client: ^3.0.2
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   build_runner: any
