--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Game-based Investments
 
 publish_to: "none"
 
-version: 6.6.1+309
+version: 6.6.2+311
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -49,7 +49,7 @@ dependencies:
   logger: ^2.4.0
   lottie: ^3.1.2
   mixpanel_flutter: ^2.3.1
-  open_filex: ^4.3.1
+  open_file: ^3.5.4
   package_info_plus: ^8.0.2
   path_provider: ^2.0.2
   pdf: ^3.1.0
