--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
     </queries>
 
     <application
-        android:name="in.fello.felloapp.Application"
+        android:name="${applicationName}"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -109,21 +109,11 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="fello.onelink.me"
-                    android:pathPrefix="/uxu0"
-                    android:scheme="https" />
-                    
-                <data
-                    android:host="app.fello.in"
-                    android:pathPrefix="/uxu0"
-                    android:scheme="https" />
-                
                 <data
                     android:host="fello.in"
-                    android:scheme="https" />
-
+                    android:scheme="https" 
+                    android:pathPrefix="/app/"
+                    />
             </intent-filter>
         </activity>
 
