--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,7 +40,7 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       if config.build_settings['WRAPPER_EXTENSION'] == 'bundle'
-        config.build_settings['DEVELOPMENT_TEAM'] = 'TRANSACTREE ENTERPRISES PRIVATE LIMITED'
+        config.build_settings['DEVELOPMENT_TEAM'] = 'Expertree Technologies Private Limited'
       end
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
         '$(inherited)',
