--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,12 @@ subprojects {
                 if (namespace == null) {
                     namespace project.group
                 }
+                if (project.name == "hmssdk_flutter"){
+                    compileOptions {
+                        sourceCompatibility JavaVersion.VERSION_21
+                        targetCompatibility JavaVersion.VERSION_21
+                    }
+                }
             }
         }
     }
