fix: updated info plist for warning

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -123,6 +123,8 @@
 			<string>PDF Document</string>
 			<key>CFBundleTypeRole</key>
 			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>com.adobe.pdf</string>
